# case-attribute-discovery

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml
src/case_attribute_discovery/: config.py  discovery.py
tests/: discovery_test.py
