[tool.poetry]
name = "case-attribute-discovery"
version = "0.1.8"
description = ""
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>"]
readme = "README.md"
packages = [{ include = "case_attribute_discovery", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.2"
setuptools = "^67.8.0"
pix-framework = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
